test/conformance/chainsaw/globalcontext/validate-apicall-data/gctxentry.yaml
apiVersion: kyverno.io/v2alpha1
kind: GlobalContextEntry
metadata:
  name: gctxentry-validate-apicall-data
spec:
  apiCall:
    service:
      url: http://localhost:8080
    method: GET
    data:
      - key: foo
        value: bar
    refreshInterval: 10s
