test/conformance/chainsaw/globalcontext/validate-apicall-data/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: validate-apicall-data
spec:
  concurrent: false
  steps:
    - name: validation
      try:
        - apply:
            expect:
              - check:
                  ($error != null): true
            file: gctxentry.yaml
